# funyi

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml  realtime_server.py
desktop/: README.md  biome.json  package.json  pnpm-lock.yaml
desktop/scripts/: build-ui-tests.mjs  build-ui.mjs  run-ui-tests.mjs
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: funyi-icon.icns
desktop/src-tauri/src/: main.rs  overlay.rs  overlay_window.rs
desktop/src-tauri/src/audio/: linux.rs  macos.rs  mod.rs  pcm.rs  windows.rs
desktop/src-tauri/src/overlay_window/: macos.rs  windows.rs
desktop/ui/: index.html  tsconfig.json  tsconfig.test.json
desktop/ui/src/: app-accessibility-contract.test.ts  app-controller.ts  app-dom.test.ts  app-dom.ts  app-markup-contract.test.ts  app.test.ts  app.ts  appearance.test.ts  appearance.ts  asr-client.test.ts  asr-client.ts  audio-adapter.ts  audio-capture-events.test.ts  audio-capture-events.ts  audio-format.test.ts  audio-format.ts  audio-level.test.ts  audio-level.ts  audio-source-kind.test.ts  audio-source-kind.ts  audio-source-select.test.ts  audio-source-select.ts  audio-source.test.ts  audio-source.ts  background-image.test.ts  background-image.ts  caption-color-contract.test.ts  caption-view.test.ts  caption-view.ts  chrome-controller.test.ts  chrome-controller.ts  desktop-audio-adapter.test.ts  desktop-audio-adapter.ts  desktop-host.test.ts  desktop-host.ts  desktop-layout-contract.test.ts  desktop-native-contract.test.ts  desktop-security-contract.test.ts  error-message.test.ts  finish-timeout.test.ts  (+68 more)
docs/: cpu_backend.md  infinite_streaming_asr_design.md  macos_mlx.md  performance_optimization.md  qwen3_asr_1_7b_architecture.md  realtime_asr_service.md  realtime_translation_design.md  streaming_runtime.md  validation_and_regression.md
qwen3_asr_runtime/: __init__.py  audio_utils.py  cuda_serialization.py  decode_runtime.py  firered_stream_vad_postprocessor.py  flashinfer_attention.py  forced_aligner.py  fused_linears.py  fused_rmsnorm.py  language_support.py  mlx_forced_aligner.py  mlx_translation.py  model.py  offline_transcription.py  offline_units.py  quant_linears.py  realtime_session.py  realtime_timestamps.py  realtime_translation.py  spec_decode.py  speech_gate.py  streaming.py  subtitle_document.py  transcript_store.py  transcription_document.py  translation.py  utils.py  vad.py
qwen3_asr_runtime/backends/: __init__.py  base.py  mlx.py  transformers.py
qwen3_asr_runtime/hf_qwen3_asr/: __init__.py  configuration_qwen3_asr.py  modeling_qwen3_asr.py  processing_qwen3_asr.py
qwen3_asr_runtime/mlx_common/: __init__.py  cache.py  dtypes.py  hub.py  layers.py  weights.py
qwen3_asr_runtime/mlx_hunyuan/: __init__.py  config.py  model.py
qwen3_asr_runtime/mlx_qwen3_asr/: __init__.py  audio_encoder.py  config.py  layers.py  model.py  text_decoder.py  weights.py
scripts/: start_backend.ps1  start_backend.sh
tests/: test_benchmark_translation.py  test_forced_aligner.py  test_mlx_backend.py  test_mlx_forced_aligner.py  test_mlx_hunyuan.py  test_offline_transcription.py  test_offline_transcription_api.py  test_realtime_asr.py  test_realtime_timestamps.py  test_realtime_translation.py  test_streaming_spec_decode.py  test_subtitle_document.py  test_transcript_store_concurrency.py  test_transcription_document.py  test_transformers_backend.py  test_translation.py  test_translation_gate.py  test_translation_golden.py  test_translation_warmup.py  test_utils.py  test_ws_e2e_invariants.py
tools/: audio_window.py  benchmark_offline.py  benchmark_streaming.py  benchmark_translation.py  fetch_opus_eval.py  gate_translation.py  gen_translation_golden.py  generate_offline_regression_golden.py  generate_profile_golden.py  generate_streaming_regression_golden.py  merge_cer_sweeps.py  parity_mlx_aligner.py  parity_mlx_translation.py  parity_mlx_vs_hf.py  profile_decode_named.py  profile_forced_aligner.py  profile_streaming.py  profile_transcribe.py  run_forced_aligner_baseline.py  run_regression.py  run_streaming_regression.py  run_with_resource_limits.py  runtime_helpers.py  smoke_translation.py  streaming_regression_common.py  sweep_cer_vs_srt.py  sweep_streaming_cer_vs_srt.py  translation_warmup.py  ws_e2e_leak_check.py
