[project]
name = "qwen3-asr-runtime"
version = "0.1.0"
license = "MIT AND Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "transformers==4.57.6",
  "accelerate==1.12.0",
  "librosa",
  "soundfile",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "websockets>=13.0",
  "silero-vad==5.1.2",
  "torchaudio==2.9.1",
  # flashinfer and its Triton/CUDA build toolchain (ninja) only resolve on
  # Linux+CUDA. On macOS/Apple Silicon the MLX backend replaces this whole
  # optimized stack.
  "flashinfer-python>=0.6.9 ; sys_platform == 'linux'",
  "ninja>=1.13 ; sys_platform == 'linux'",
  "nagisa==0.2.11",
  "soynlp==0.0.493",
  # MLX backend (Apple Silicon only). Pure-Metal model layer; no CUDA.
  "mlx>=0.18 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv]
package = false

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
