[project]
name = "qwen3-asr-runtime"
version = "0.1.0"
license = "MIT AND Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch==2.9.1",
  "transformers==4.57.6",
  "accelerate==1.12.0",
  "librosa",
  "soundfile",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "websockets>=13.0",
  "silero-vad==5.1.2",
  "torchaudio==2.9.1",
  # flashinfer and its Triton/CUDA build toolchain (ninja) only resolve on
  # Linux+CUDA. On macOS/Apple Silicon the MLX backend replaces this whole
  # optimized stack.
  "flashinfer-python>=0.6.9 ; sys_platform == 'linux'",
  "ninja>=1.13 ; sys_platform == 'linux'",
  "nagisa==0.2.11",
  "soynlp==0.0.493",
  # MLX backend (Apple Silicon only). Pure-Metal model layer; no CUDA.
  # Floor 0.31: the pipelined greedy loops rely on mx.async_eval being safe as
  # the first op on a fresh thread (older MLX crashed there; verified on 0.31.2).
  "mlx>=0.31 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "rapidfuzz>=3.14.5",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
