[package]
name = "funyi-desktop"
version = "0.1.0"
description = "Lightweight desktop client for the local Funyi realtime ASR service"
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "3.1.3", features = ["macos_15_0"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Security", "Win32_System_Com", "Win32_System_Threading"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
serde_json = "1"
